--- a/CashboxCalculator/index.html
+++ b/CashboxCalculator/index.html
@@ -14,8 +14,8 @@
     <main>
 
         <div>
-            <label for="person-count">人數:</label>
-            <input type="number" id="person-count" name="person-count" min="1" value="1">
+            <label for="personCount">人數:</label>
+            <input type="number" id="personCount" name="personCount" min="1" value="1">
         </div>
 
         <br>
@@ -37,15 +37,15 @@
             <select id="storeDropdown"></select>
         </div>
 
-        <div id="box-size" style="display:none;">
+        <div id="boxSize" style="display:none;">
             <br>
-            <label for="box-size-dropdown">選擇包廂尺寸:</label>
-            <select id="box-size-dropdown"></select>
+            <label for="boxSizeDropdown">選擇包廂尺寸:</label>
+            <select id="boxSizeDropdown"></select>
         </div>
 
         <br>
 
-        <div>
+        <div id="gneneral">
             <label for="weekdayDropdown">選擇星期:</label>
             <select id="weekdayDropdown"></select>
 
@@ -53,10 +53,16 @@
             <select id="timeDropdown"></select>
         </div>
 
-        <div id="singing-hour" style="display:none;">
+        <div id="group" style="display:none;">
             <br>
-            <label for="singing-hour-input">歡唱時間:</label>
-            <input type="number" id="singing-hour-input" name="singing-hour-input" min="1">
+            <label for="groupDropdown">選擇時段:</label>
+            <select id="groupDropdown"></select>
+        </div>
+
+        <div id="singingHour" style="display:none;">
+            <br>
+            <label for="singingHourInput">歡唱時間:</label>
+            <input type="number" id="singingHourInput" name="singingHourInput" min="1">
         </div>
 
         <!-- <br>
@@ -105,11 +111,18 @@
     <script src="./group/checkOutByUsingGroup.js"></script>
 
     <script>
-        const personCount = document.getElementById('person-count');
+        const personCount = document.getElementById('personCount');
+
+        const gneneral = document.getElementById('gneneral');
+        const group = document.getElementById('group');
+        const groupDropdown = document.getElementById('groupDropdown');
+
         const weekdayDropdown = document.getElementById('weekdayDropdown');
         const timeDropdown = document.getElementById('timeDropdown');
-        const singingHour = document.getElementById('singing-hour');
-        const singingHourInput = document.getElementById('singing-hour-input');
+
+        const singingHour = document.getElementById('singingHour');
+        const singingHourInput = document.getElementById('singingHourInput');
+
         const submitBtn = document.getElementById('submit-btn');
         const result = document.getElementById('result');
 
@@ -121,20 +134,25 @@
             if (chargeDropdown.value === 'box') {
                 //包廂
                 boxSize.style.display = 'block';
+                group.style.display = 'none';
+                gneneral.style.display = 'block';
                 if (storeDropdown.value) {
                     //設定包廂尺寸
                     setBoxSize(storeDropdown.value);
                 }
-                setStore
             } else if (chargeDropdown.value === 'person') {
                 //優惠時段
                 boxSize.style.display = 'none';
+                group.style.display = 'none';
+                gneneral.style.display = 'block';
                 while (boxSizeDropdown.firstChild) {
                     boxSizeDropdown.removeChild(boxSizeDropdown.firstChild);
                 }
             } else if (chargeDropdown.value === 'group') {
                 //團唱
                 boxSize.style.display = 'none';
+                group.style.display = 'block';
+                gneneral.style.display = 'none';
                 while (boxSizeDropdown.firstChild) {
                     boxSizeDropdown.removeChild(boxSizeDropdown.firstChild);
                 }
@@ -158,9 +176,10 @@
             while (boxSizeDropdown.firstChild) {
                 boxSizeDropdown.removeChild(boxSizeDropdown.firstChild);
             }
-            // clear singingHourInput
+            while (groupDropdown.firstChild) {
+                groupDropdown.removeChild(groupDropdown.firstChild);
+            }
             singingHourInput.value = '';
-
 
             if (charge === 'box') {
                 setBoxSize(store);
@@ -232,9 +251,7 @@
                         break;
 
                     case 'group':
-                        const selectedOption = weekdayDropdown.selectedOptions[0];
-                        const hour = selectedOption.getAttribute('data-hour');
-                        message = await checkOutByUsingGroup(store, weekday, hour, personCount.value)
+                        message = await checkOutByUsingGroup(store, groupDropdown.value, personCount.value)
                         break;
 
                     default:
@@ -250,7 +267,7 @@
 
         const footer = document.getElementById('footer');
         const footers = [
-            '獻給所有不想打電話的社恐仔', 
+            '獻給所有不想打電話的社恐仔',
             '獻給不知道要出多少錢就不去唱歌的精打細算仔',
         ];
 
